# colludebench-cascade

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
colludebench-cascade/: BENCHMARK.md  DATASET.md  EXPERIMENT_REGISTRY.md  MODEL_PROVENANCE.md  QUICKSTART.md  package.json
colludebench-cascade/runner/: _inference.ts  config-parser.ts  demand-model.ts  history-builder.ts  index.ts  round-executor.ts  topology.ts  trace-logger.ts  types.ts
colludebench-cascade/verifiers/: basin-clustering.py  basin-verify.ts  cross-check-runs.py  formalize-addendum1-2026-04-26.py  n2-robustness-100resample-2026-04-27.py  n3-cluster-effect-size-2026-04-27.py  stress-alt-hypotheses.py  verify-formalize-2026-04-26.py  verify-stage2b-2026-04-26.py  verify-stage2b.py
paper/: LICENSE-CC-BY-4.0  README.md  main.tex  references.bib
paper/figures/: fig1-methodology-flow.tex  fig2-delta-profit.py  fig3-convergence-trajectories.py  fig4-basin-stability.py  fig5-host-pairwise.py
paper/sections/: 00-abstract.tex  01-introduction.tex  02-related-work.tex  03-methods.tex  04-results.tex  05-discussion.tex  06-limitations.tex  07-conclusion.tex
pilot/: analyze-cot-cross-references.ts  analyze-cot-residualized.ts  analyze-host-effect.ts
pilot/results/: cot-cross-references-2026-05-03.json  cot-residualized-2026-05-04.json
proposal/: 01-abstract.md  02-the-problem.md  04-hypotheses.md  05-methodology.md  06-why-5m.md  07-team.md  09-outcomes.md  10-timeline.md  11-budget.md  12-responsible-research.md  13-references.md  README.md  compute-strategy.md
pypi/: README.md  pyproject.toml
pypi/src/colludebench_cascade/: __init__.py  cli.py  info.py
verification/: README.md  claims-map.md  sr-m-registry.md
verification/council-certificates/: iter-4-gap-list.md  (+1 more)
(+68 files in other folders)
